[gd_scene load_steps=15 format=3 uid="uid://0ugh23teop1k"]

[ext_resource type="Script" path="res://scenes/clicker/clicker.gd" id="1_x4tww"]
[ext_resource type="Texture2D" uid="uid://cn7tgfran4276" path="res://images/rizz up bro.png" id="2_ofkri"]
[ext_resource type="Texture2D" uid="uid://cbxhsoeipvsh5" path="res://images/rizz up bro selected.png" id="3_hwjwf"]
[ext_resource type="Texture2D" uid="uid://cgw7gbymdgwcm" path="res://images/rizz up bro pressed.png" id="4_b2aow"]
[ext_resource type="Script" path="res://scenes/clicker/rizz_up_baddies.gd" id="5_bmg3l"]
[ext_resource type="AudioStream" uid="uid://dsvj1h68514oq" path="res://audios/rizz-sounds.mp3" id="6_wa5sw"]
[ext_resource type="Script" path="res://scenes/clicker/building generator.gd" id="7_aw2l3"]
[ext_resource type="Texture2D" uid="uid://domef3b1rl5le" path="res://images/money_32.png" id="8_uinqy"]
[ext_resource type="Script" path="res://scenes/clicker/ticker.gd" id="9_gou5p"]
[ext_resource type="Script" path="res://scenes/clicker/auraBreweries.gd" id="10_tjwmh"]
[ext_resource type="Script" path="res://scenes/clicker/goldChains.gd" id="11_60mek"]
[ext_resource type="Script" path="res://scenes/clicker/moggers.gd" id="12_4cyys"]

[sub_resource type="BitMap" id="BitMap_wokhq"]

[sub_resource type="Theme" id="Theme_4dnqd"]
Button/colors/icon_normal_color = Color(0, 1, 0, 1)

[node name="clicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x4tww")

[node name="rizz up baddies" type="TextureButton" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -198.0
offset_right = 464.0
offset_bottom = 202.0
grow_vertical = 2
texture_normal = ExtResource("2_ofkri")
texture_pressed = ExtResource("3_hwjwf")
texture_hover = ExtResource("4_b2aow")
texture_click_mask = SubResource("BitMap_wokhq")
script = ExtResource("5_bmg3l")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="rizz up baddies"]
stream = ExtResource("6_wa5sw")
volume_db = 5.0
pitch_scale = 1.95
max_polyphony = 6

[node name="Node2D" type="Node2D" parent="."]
z_index = -3
y_sort_enabled = true
position = Vector2(0, 2)
script = ExtResource("7_aw2l3")

[node name="Timer" type="Timer" parent="Node2D"]
autostart = true

[node name="TextureButton" type="Node" parent="."]

[node name="Sprite" type="Sprite2D" parent="TextureButton"]
position = Vector2(554, 170)
texture = ExtResource("8_uinqy")

[node name="TextureButton" type="TextureButton" parent="TextureButton/Sprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2

[node name="shake tween" type="Node" parent="TextureButton" node_paths=PackedStringArray("button", "animationImage")]
script = ExtResource("9_gou5p")
button = NodePath("../Sprite/TextureButton")
animationImage = NodePath("../Sprite")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -415.0
offset_bottom = 648.0
grow_horizontal = 0

[node name="buildings" type="Control" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="aura breweries" type="Button" parent="ScrollContainer/buildings" node_paths=PackedStringArray("auraLabel", "auraTimer", "breweries")]
custom_minimum_size = Vector2(110, 90)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 98.0
offset_bottom = 188.0
grow_horizontal = 0
theme = SubResource("Theme_4dnqd")
theme_override_font_sizes/font_size = 24
script = ExtResource("10_tjwmh")
auraLabel = NodePath("Panel2/Label")
auraTimer = NodePath("aura")
breweries = NodePath("breweries")

[node name="aura" type="Timer" parent="ScrollContainer/buildings/aura breweries"]
autostart = true

[node name="breweries" type="Timer" parent="ScrollContainer/buildings/aura breweries"]
wait_time = 5.0

[node name="Panel2" type="Panel" parent="ScrollContainer/buildings/aura breweries"]
layout_mode = 0
offset_left = -283.0
offset_top = -3.0
offset_right = -6.0
offset_bottom = 93.0

[node name="Label" type="Label" parent="ScrollContainer/buildings/aura breweries/Panel2"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 17
text = "aura brewieres"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gold chains" type="Button" parent="ScrollContainer/buildings" node_paths=PackedStringArray("goldChainsLabel")]
custom_minimum_size = Vector2(110, 90)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_bottom = 90.0
grow_horizontal = 0
theme = SubResource("Theme_4dnqd")
theme_override_font_sizes/font_size = 24
text = "16"
script = ExtResource("11_60mek")
goldChainsLabel = NodePath("Panel/Label")

[node name="Panel" type="Panel" parent="ScrollContainer/buildings/gold chains"]
layout_mode = 0
offset_left = -283.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = 94.0

[node name="Label" type="Label" parent="ScrollContainer/buildings/gold chains/Panel"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 17
text = "gold chains money face"
horizontal_alignment = 1
vertical_alignment = 1

[node name="moggers" type="Button" parent="ScrollContainer/buildings" node_paths=PackedStringArray("moggersTimer", "moggersLabel")]
custom_minimum_size = Vector2(110, 90)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 194.0
offset_bottom = 284.0
grow_horizontal = 0
theme = SubResource("Theme_4dnqd")
theme_override_font_sizes/font_size = 24
text = "256"
script = ExtResource("12_4cyys")
moggersTimer = NodePath("Timer")
moggersLabel = NodePath("Panel3/Label")

[node name="Timer" type="Timer" parent="ScrollContainer/buildings/moggers"]
autostart = true

[node name="Panel3" type="Panel" parent="ScrollContainer/buildings/moggers"]
layout_mode = 0
offset_left = -283.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = 94.0

[node name="Label" type="Label" parent="ScrollContainer/buildings/moggers/Panel3"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 17
text = "mogg"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="rizz up baddies" to="." method="_on_button_button_down"]
[connection signal="button_down" from="rizz up baddies" to="rizz up baddies" method="_on_button_down"]
[connection signal="button_up" from="rizz up baddies" to="rizz up baddies" method="_on_button_up"]
[connection signal="pressed" from="rizz up baddies" to="." method="_on_button_pressed"]
[connection signal="pressed" from="rizz up baddies" to="rizz up baddies" method="_on_pressed"]
[connection signal="timeout" from="Node2D/Timer" to="Node2D" method="_on_timer_timeout"]
[connection signal="pressed" from="ScrollContainer/buildings/aura breweries" to="ScrollContainer/buildings/aura breweries" method="_on_pressed"]
[connection signal="timeout" from="ScrollContainer/buildings/aura breweries/aura" to="ScrollContainer/buildings/aura breweries" method="_on_aura_timeout"]
[connection signal="timeout" from="ScrollContainer/buildings/aura breweries/breweries" to="ScrollContainer/buildings/aura breweries" method="_on_breweries_timeout"]
[connection signal="pressed" from="ScrollContainer/buildings/gold chains" to="." method="_on_gold_chains_pressed"]
[connection signal="pressed" from="ScrollContainer/buildings/gold chains" to="ScrollContainer/buildings/gold chains" method="_on_pressed"]
[connection signal="pressed" from="ScrollContainer/buildings/moggers" to="ScrollContainer/buildings/moggers" method="_on_pressed"]
[connection signal="timeout" from="ScrollContainer/buildings/moggers/Timer" to="ScrollContainer/buildings/moggers" method="_on_timer_timeout"]
